--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "check-types": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -11,6 +12,7 @@
     "@heroicons/react": "^2.0.12",
     "@mui/material": "^5.10.12",
     "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "firebase": "^9.13.0",
     "next": "latest",
     "react": "18.2.0",
